--- a/css/custom.css
+++ b/css/custom.css
@@ -212,7 +212,7 @@ body{background-image: url(subtle_stripes.png); background-color: rgb(181, 181, 
 
 h1{font-weight: normal; font-style: normal; letter-spacing: 0px; line-height: 58px; margin-top: 15px; font-family: Terminal Dosis Light; color: rgb(0, 0, 0);}
 
-.page-content, .page-content li{line-height: 22px; ;font-family: Maven Pro;}
+.page-content, .page-content li{line-height: 22px; ;font-family: Helvetica Neue;}
 
 .page-content a{color: rgb(191, 13, 0); font-family: Maven Pro;}
 
