--- a/css/custom.css
+++ b/css/custom.css
@@ -411,3 +411,23 @@ h6,.page-content h6 a{font-weight: normal; font-style: normal; ;font-family: Ter
     margin: 0;
     margin-bottom: 4px;
 }
+
+.centered {
+    text-align: center;
+}
+
+#toTop {
+	width:100px;
+        border:1px solid #ccc;
+        background:#f7f7f7;
+        text-align:center;
+        padding:5px;
+        position:fixed; /* this is the magic */
+        bottom:10px; /* together with this to put the div at the bottom*/
+        right:10px;
+        cursor:pointer;
+        display:none;
+        color:#333;
+        font-family:verdana;
+        font-size:11px;
+}
