--- a/css/custom.css
+++ b/css/custom.css
@@ -212,7 +212,7 @@ body{background-image: url(subtle_stripes.png); background-color: rgb(181, 181, 
 
 h1{font-weight: normal; font-style: normal; letter-spacing: 0px; 
     /*line-height: 58px; margin-top: 15px; */
-    font-family: Terminal Dosis Light; color: rgb(0, 0, 0);}
+    font-family: Dosis; color: rgb(0, 0, 0);}
 
 .page-content, .page-content li{line-height: 22px;}
 
@@ -234,7 +234,7 @@ h1{font-weight: normal; font-style: normal; letter-spacing: 0px;
 
 #divFooter h3{font-family: Terminal Dosis Light; font-weight: normal; font-style: normal; font-size: 19px; line-height: 45px; color: rgb(227, 227, 227);}
 
-h2{font-weight: normal; font-style: normal; ;font-family: Terminal Dosis Light;}
+h2{font-weight: normal; font-style: normal; ;font-family: Dosis;}
 
 .transparent-bg{-moz-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px; -webkit-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px; box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;   background-color: rgb(255, 255, 255); border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px;}
 
@@ -459,6 +459,27 @@ h6,.page-content h6 a{font-weight: normal; font-style: normal; ;font-family: Ter
     margin-right: 4px;
 }
 
-.my-font {
-    font-family: 'Dosis';
+.company_container {
+    height: 100px;
+    text-align: center;
+    line-height: 100px;
 }
+
+.company_logo {
+
+    max-height: 100px;
+}
+
+.company-name {
+    line-height: 100px;
+}
+
+.comp_name {
+    font-family: Terminal Dosis Light !important;
+    font-size: 50px;
+}
+
+
+/*.my-font {
+    font-family: 'Dosis';
+}*/
