--- a/css/custom.css
+++ b/css/custom.css
@@ -541,9 +541,7 @@ h6,.page-content h6 a{font-weight: normal; font-style: normal; ;font-family: Dos
 }
 
 .comment-row {
-    padding-left: 5px !important;
-    padding-right: 5px !important;
-    margin: 0;
+    margin: 0 !important;
 }
 
 .new-rating {
@@ -554,3 +552,16 @@ h6,.page-content h6 a{font-weight: normal; font-style: normal; ;font-family: Dos
 .hr-custom {
     margin: 10px 0 !important;
 }
+
+.well-comment {
+    width: 95%;
+}
+
+.main-rating {
+    width: 150px !important;
+}
+
+.comment-msg {
+    margin: 10px 0;
+}
+
