--- a/css/custom.css
+++ b/css/custom.css
@@ -559,9 +559,42 @@ h6,.page-content h6 a{font-weight: normal; font-style: normal; ;font-family: Dos
 
 .main-rating {
     width: 150px !important;
+    margin: 5px 0;
+    display: inline-block
 }
 
 .comment-msg {
     margin: 10px 0;
 }
 
+.comment-name {
+    text-align: center;
+    width: 64px;
+    text-decoration: none;
+}
+
+a.comment-link:link {
+    text-decoration:none !important;
+}
+a.comment-link:visited {
+    text-decoration:none !important;
+}
+a.comment-link:hover {
+    text-decoration:underline;
+}
+a.comment-link:active {
+    text-decoration:underline;
+}
+
+.rate-title {
+    margin: 0 auto;
+    width: 300px;
+}
+
+.avg_rate {
+    display: inline-block;
+}
+
+.time-ago {
+    font-size: 11px;
+}
