--- a/css/custom.css
+++ b/css/custom.css
@@ -226,7 +226,18 @@ h1{font-weight: normal; font-style: normal; letter-spacing: 0px;
 
 .sidebox a{color: rgb(191, 13, 0); font-family: Maven Pro;}
 
-#divFooter{border-bottom-left-radius: 30px; border-bottom-right-radius: 30px; background-color: rgb(191, 13, 0); color: rgb(227, 227, 227); font-family: Maven Pro; text-transform: none; font-size: 12px; letter-spacing: 0px; line-height: 22px; background-image: -webkit-linear-gradient(top, rgb(191, 13, 0), rgb(171, 11, 0));}
+#divFooter{
+    /*border-bottom-left-radius: 30px;*/ 
+    /*border-bottom-right-radius: 30px;*/ 
+    background-color: rgb(191, 13, 0); 
+    color: rgb(227, 227, 227); 
+    font-family: Maven Pro; 
+    text-transform: none; 
+    font-size: 12px; 
+    letter-spacing: 0px; 
+    line-height: 22px; 
+    background-image: -webkit-linear-gradient(top, rgb(191, 13, 0), rgb(171, 11, 0));
+}
 
 .divPanel{padding: 40px;}
 
@@ -236,7 +247,16 @@ h1{font-weight: normal; font-style: normal; letter-spacing: 0px;
 
 h2{font-weight: normal; font-style: normal; ;font-family: Dosis;}
 
-.transparent-bg{-moz-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px; -webkit-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px; box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;   background-color: rgb(255, 255, 255); border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px;}
+.transparent-bg{
+    -moz-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;
+    box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;
+    background-color: rgb(255, 255, 255);
+/*    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;*/
+}
 
 .breadcrumbs a{color: rgb(191, 13, 0);;font-family: Maven Pro;}
 
@@ -584,6 +604,7 @@ a.comment-link:hover {
 }
 a.comment-link:active {
     text-decoration:underline;
+    outline: none;
 }
 
 .rate-title {
