--- a/css/custom.css
+++ b/css/custom.css
@@ -227,8 +227,8 @@ h1{font-weight: normal; font-style: normal; letter-spacing: 0px;
 .sidebox a{color: rgb(191, 13, 0); font-family: Maven Pro;}
 
 #divFooter{
-    /*border-bottom-left-radius: 30px;*/ 
-    /*border-bottom-right-radius: 30px;*/ 
+    border-bottom-left-radius: 30px; 
+    border-bottom-right-radius: 30px; 
 /*    background-color: rgb(191, 13, 0); 
     color: rgb(227, 227, 227); */
     font-family: Maven Pro; 
@@ -254,10 +254,10 @@ h2{font-weight: normal; font-style: normal; ;font-family: Dosis;}
     -webkit-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;
     box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;
     background-color: rgb(255, 255, 255);
-/*    border-top-left-radius: 30px;
+    border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
-    border-bottom-left-radius: 30px;*/
+    border-bottom-left-radius: 30px;
 }
 
 .breadcrumbs a{color: rgb(191, 13, 0);;font-family: Maven Pro;}
@@ -658,4 +658,14 @@ h1.votes {
     /*margin-right: 40px;*/
     float: left;
     /*padding: 0 42px;*/
+}
+
+.ddmenu {
+    margin-right: 0 !important; 
+}
+
+.read-more {
+    margin-bottom: 7px;
+    display: block !important;
+    width: 30px;
 }
