--- a/css/custom.css
+++ b/css/custom.css
@@ -236,6 +236,9 @@ h1{font-weight: normal; font-style: normal; letter-spacing: 0px;
     font-size: 12px; 
     letter-spacing: 0px; 
     line-height: 22px; 
+        -moz-box-shadow: rgba(0, 0, 0, 1.294118) 0px 0px 4px;
+    -webkit-box-shadow: rgba(0, 0, 0, 1.294118) 0px 0px 4px;
+    box-shadow: rgba(0, 0, 0, 1.294118) 0px 0px 4px;
     /*background-image: -webkit-linear-gradient(top, rgb(191, 13, 0), rgb(171, 11, 0));*/
 }
 
@@ -668,4 +671,9 @@ h1.votes {
     margin-bottom: 7px;
     display: block !important;
     width: 30px;
+}
+
+.footer-hr {
+    border-top: 2px solid #eee;
+    margin: 0 0;
 }
