--- a/css/custom.css
+++ b/css/custom.css
@@ -659,7 +659,7 @@ h1.votes {
 
 .status-line {
     /*margin-right: 40px;*/
-    float: left;
+    /*float: left;*/
     margin-top: 10px;
     /*padding: 0 42px;*/
 }
