--- a/css/custom.css
+++ b/css/custom.css
@@ -661,6 +661,7 @@ h1.votes {
     /*margin-right: 40px;*/
     /*float: left;*/
     margin-top: 10px;
+    margin-left: 40px;
     /*padding: 0 42px;*/
 }
 
