--- a/css/custom.css
+++ b/css/custom.css
@@ -227,19 +227,20 @@ h1{font-weight: normal; font-style: normal; letter-spacing: 0px;
 .sidebox a{color: rgb(191, 13, 0); font-family: Maven Pro;}
 
 #divFooter{
-/*    border-bottom-left-radius: 30px; 
-    border-bottom-right-radius: 30px; */
-/*    background-color: rgb(191, 13, 0); 
-    color: rgb(227, 227, 227); */
+    /*    border-bottom-left-radius: 30px; 
+        border-bottom-right-radius: 30px; */
+    /*    background-color: rgb(191, 13, 0); 
+        color: rgb(227, 227, 227); */
     font-family: Maven Pro; 
     text-transform: none; 
     font-size: 12px; 
     letter-spacing: 0px; 
     line-height: 22px; 
-        -moz-box-shadow: rgba(0, 0, 0, 1.294118) 0px 0px 4px;
+    -moz-box-shadow: rgba(0, 0, 0, 1.294118) 0px 0px 4px;
     -webkit-box-shadow: rgba(0, 0, 0, 1.294118) 0px 0px 4px;
     box-shadow: rgba(0, 0, 0, 1.294118) 0px 0px 4px;
     /*background-image: -webkit-linear-gradient(top, rgb(191, 13, 0), rgb(171, 11, 0));*/
+
 }
 
 .divPanel{padding: 40px;}
@@ -247,20 +248,20 @@ h1{font-weight: normal; font-style: normal; letter-spacing: 0px;
 #divFooter a{color: rgb(191, 13, 0); font-family: Maven Pro; font-size: 12px; line-height: 22px;}
 
 #divFooter h3{font-family: Dosis; font-weight: normal; font-style: normal; font-size: 19px; line-height: 45px; 
-   /*color: rgb(227, 227, 227);*/
+              /*color: rgb(227, 227, 227);*/
 }
 
 h2{font-weight: normal; font-style: normal; ;font-family: Dosis;}
 
 .transparent-bg{
-/*    -moz-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;
-    box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;*/
+    /*    -moz-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;
+        -webkit-box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;
+        box-shadow: rgba(0, 0, 0, 0.294118) 0px 1px 4px;*/
     background-color: rgb(255, 255, 255);
-/*    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-    border-bottom-left-radius: 30px;*/
+    /*    border-top-left-radius: 30px;
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+        border-bottom-left-radius: 30px;*/
 }
 
 .breadcrumbs a{color: rgb(191, 13, 0);;font-family: Maven Pro;}
@@ -709,4 +710,9 @@ h1.votes {
     font-weight: bold;
     font-style: normal;
     text-transform: uppercase;
+}
+
+.panel-footer {
+    padding-top: 15px;
+    padding-bottom: 10px;
 }
